# Personal-AE-SC-Jarvis

./: .env.example  .env.template  .gitignore  ACCOUNTS  ACCOUNT_CREATION.md  ADVANCED_USAGE.md  ART OF SHAIK.md  AUDIT_RESPONSE.md  BUILD_COMPLETE_SUMMARY.md  BUILD_SUMMARY.md  CHANGES_JARVIS_v3.md  CHECK_CONFIG.bat  CLAUDE_SYSTEM_PROMPT.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CRM_DASHBOARD.html  CRM_DASHBOARD_INTERACTIVE.html  DELIVERY_MANIFEST.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DIAGNOSE.bat  FILE_INDEX.md  FINAL_DELIVERY.md  FINAL_VALIDATION_REPORT.md  FIX_JARVIS.bat  FORK_GUIDE.md  FULL_AUTONOMY_READY.md  HOW_THIS_WORKS.md  IMPLEMENTATION_SUMMARY.txt  INTEGRATION_COMPLETE.md  JARVIS_QUICK_REFERENCE.txt  JARVIS_REALTIME_DASHBOARD.html  JARVIS_ROADMAP.md  LICENSE  LIFECYCLE_GUIDE.md  MASTER_SHEET.md  MCP_INTEGRATION_GUIDE.md  MCP_LIFECYCLE.md  MODEL_ASSIGNMENTS.md  (+52 more)
.claude/: CLAUDE.md  JARVIS.md  launch.json  settings.json  workspace.md
.githooks/: pre-commit
config/: mcp-observer.json  playbook_stages.yaml  rules.yaml
docs/: README.md
jarvis/: INSTALL.md  README.md  __init__.py  account_resolver.py  autodetect.py  setup.py  universal_bridge.py
jarvis_mcp/: account_dashboard.py  account_hierarchy.py  account_scaffolder.py  advanced_fuzzy_matcher.py  advanced_nlp_extractor.py  claude_md_evolve.py  claude_md_guardrails.py  claude_md_loader.py  competitor_knowledge_base.py  comprehensive_data_aggregator.py  context_detector.py  crm_api_server.py  mcp_server.py  onboarding_info_extractor.py  platform_utils.py  queue_manager.py  (+2 more)
(+270 files in other folders)
